k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refoza-backend
  namespace: refoza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refoza-backend
  template:
    metadata:
      labels:
        app: refoza-backend
    spec:
      serviceAccountName: refoza-backend-sa
      containers:
        - name: backend
          image: us-west1-docker.pkg.dev/refoza/refoza/backend:v48
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
        - name: cloudsql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.2
          args:
            - "--port=5432"
            - "$(CLOUDSQL_INSTANCE_CONNECTION_NAME)"
