k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refoza-frontend
  namespace: refoza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refoza-frontend
  template:
    metadata:
      labels:
        app: refoza-frontend
    spec:
      containers:
        - name: frontend
          image: us-west1-docker.pkg.dev/refoza/refoza/frontend:v49
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /admin/login
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /admin/login
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
