k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refoza-frontend
  namespace: refoza
spec:
  selector:
    app: refoza-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
